# HAI721I-Programmation-r-partie

./: CMakeLists.txt  P.c  Pconfig.c  README.md  main.c
MainServer/: CMakeLists.txt  Pconfig.c
Pi/: CMakeLists.txt  P.c  fonctionsProcess.c  fonctionsProcess.h
